// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`People Kusama Multisig Proxy > failure tests > 2-of-3 multisig as standard proxy (non-transfer) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "callHash": "(hash)",
      "multisig": "DmDBuaenD2WM54PYRMHqQbCTKd1HnXi6AeHHyeiFU6cosXp",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`People Kusama Multisig Proxy > failure tests > 2-of-3 multisig as standard proxy (non-transfer) > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
      "callHash": "(hash)",
      "multisig": "DmDBuaenD2WM54PYRMHqQbCTKd1HnXi6AeHHyeiFU6cosXp",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`People Kusama Multisig Proxy > success tests > 2-of-3 multisig as standard proxy (any) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "callHash": "(hash)",
      "multisig": "DmDBuaenD2WM54PYRMHqQbCTKd1HnXi6AeHHyeiFU6cosXp",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`People Kusama Multisig Proxy > success tests > 2-of-3 multisig as standard proxy (any) > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
      "callHash": "(hash)",
      "multisig": "DmDBuaenD2WM54PYRMHqQbCTKd1HnXi6AeHHyeiFU6cosXp",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`People Kusama Multisig Proxy > success tests > 2-of-3 multisig as standard proxy with announcement and rejection > events when Bob approves multisig call 1`] = `
[
  {
    "data": {
      "approving": "EvvS4HELEC1nxVHsjYUsPvypd2kXeu78AguyiSN7kV2pTnk",
      "callHash": "(hash)",
      "multisig": "DmDBuaenD2WM54PYRMHqQbCTKd1HnXi6AeHHyeiFU6cosXp",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`People Kusama Multisig Proxy > success tests > 2-of-3 multisig as standard proxy with announcement and rejection > events when Dave rejects the announced call 1`] = `[]`;

exports[`People Kusama Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (any) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "callHash": "(hash)",
      "multisig": "DTXTXL29dQ6ZyKPuHfv5eSamj5RxnMo3pHkgCv19tUWPuA8",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`People Kusama Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (any) > events when Bob's proxy approves the multisig call 1`] = `
[
  {
    "data": {
      "approving": "F1KJp8wJvhH9U9UFYkrizxyvYtkJkL6KU6c6XQt3GUN34jz",
      "callHash": "(hash)",
      "multisig": "DTXTXL29dQ6ZyKPuHfv5eSamj5RxnMo3pHkgCv19tUWPuA8",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`People Kusama Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (non-transfer) > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "callHash": "(hash)",
      "multisig": "FEkHS6zfH2fx4w4CdX48cHhFn1A4BCG9AP8XXDZHRo5hzwh",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`People Kusama Multisig Proxy > success tests > 2-of-3 multisig with pure proxy (non-transfer) > events when Bob's proxy approves the multisig call 1`] = `
[
  {
    "data": {
      "approving": "Ce9dcWp8dSQTvMWc7FLLfsiXvsdSxVbZZrV5TJ2zYro3bkR",
      "callHash": "(hash)",
      "multisig": "FEkHS6zfH2fx4w4CdX48cHhFn1A4BCG9AP8XXDZHRo5hzwh",
      "result": "Ok",
      "timepoint": {
        "height": "(redacted)",
        "index": 2,
      },
    },
    "method": "MultisigExecuted",
    "section": "multisig",
  },
]
`;

exports[`People Kusama Multisig Proxy > success tests > 2-of-3 multisig with pure proxy multisig > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "D8ew585BL5H1ALhn4kmJoxhgqcgKDZLPc6xunJNv4mmrBns",
      "callHash": "(hash)",
      "multisig": "Hgy4zD8g5w8Pa5Mdt4WHtMptXJpmtXcXTg7UAPyue1zkGy3",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;

exports[`People Kusama Multisig Proxy > success tests > Cancel 2-of-3 multisig with pure proxy before any other approvals > events when Alice creates multisig 1`] = `
[
  {
    "data": {
      "approving": "J3S9PLcN1jwpE1MkduuyX9tj4ACKpckmHc9L9a4qA9oW16h",
      "callHash": "(hash)",
      "multisig": "JFY2t1MJGdjRPyA3svmvcbPsRqN6qk7Vugj6Xs7iJck3mde",
    },
    "method": "NewMultisig",
    "section": "multisig",
  },
]
`;
